# 42cursus

minishell/: .gitignore  CMakeLists.txt  Makefile  main.c  minishell.h
minishell/libft/: Makefile  ft_isalpha.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_putnbr_fd.c  ft_split.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  libft.h
minishell/minishella/: .gitignore  Makefile
minishell/minishella/libft/: .gitignore  Makefile  ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memmove.c  ft_split.c  ft_strcat.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  libft.h
minishell/minishella/srcs/: main.c  minishell.h
minishell/srcs/: ciao  env.c  utils.c  utils2.c
minishell/srcs/cmd/: builtin.c  cd.c  ciao  command.c  echo.c  env.c  exec_cmd.c  exit.c  export.c  pipe.c  pwd.c  red_in.c  red_out.c  unset.c  utils.c
minishell/srcs/history/: arrow_keys.c  history.c  utils.c
minishell/srcs/parser/: dollaroni.c  parser.c  utils.c  (+1 more)
philosophers/: CMakeLists.txt
philosophers/philo/: Makefile  actions.c  ft_atoi.c  init.c  main.c  philo  philo.h  routines.c  utils.c
philosophers/philo_bonus/: CMakeLists.txt  Makefile  actions.c  init.c  main.c  philo  philo.h  routines.c  semaphores.c  utils.c
printf/: .gitignore  CMakeLists.txt  Makefile  flag_manager.c  flag_parser.c  ft_atoi.c  ft_itoa.c  ft_itoa_base_bonus.c  ft_itoa_base_ull_bonus.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putstr_fd.c  ft_strchr.c  ft_strlen.c  ft_substr.c  helpers.c  libft.h  print_c.c  print_di.c  print_diu.c  print_p.c  print_per.c  print_s.c  print_u.c  print_x.c  test.c
printf/include/: ft_printf.h  libft.h  libprintf.h
printf/libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base_bonus.c  ft_itoa_base_ull_bonus.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  libft.h
(+586 files in other folders)
